[tool.poetry]
name = "pylib"
version = "0.2.1"
description = ""
authors = ["Ashish Arora <arora.ashish@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-semantic-release = "^9.8.0"  # Replace with the latest version

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.feat]
match = "(feat|fix|refactor)/.*"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "chore", "style", "refactor", "build"]